# ggml

examples/m2m100/: CMakeLists.txt  convert-h5-to-ggml.py  main.cpp
